@@ -22,7 +22,6 @@ package com.puppycrawl.tools.checkstyle;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
@@ -119,7 +118,7 @@ class IndentationTrailingCommentsVerticalAlignmentTest {
     }
 
     private static Stream<Path> indentationTestFiles() {
-        final Path resourcesDir = Paths.get("src", "test", "resources");
+        final Path resourcesDir = Path.of("src", "test", "resources");
         final Path indentationDir = resourcesDir.resolve(INDENTATION_TEST_FILES_PATH);
 
         Stream<Path> testFiles;
