@@ -24,7 +24,6 @@ import static com.google.common.truth.Truth.assertWithMessage;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -65,7 +64,7 @@ import com.puppycrawl.tools.checkstyle.internal.utils.XmlUtil;
  */
 public class XdocsCategoryIndexTest extends AbstractModuleTestSupport {
 
-    private static final Path XDOC_CHECKS_DIR = Paths.get("src", "site", "xdoc", "checks");
+    private static final Path XDOC_CHECKS_DIR = Path.of("src", "site", "xdoc", "checks");
 
     @Override
     protected String getPackageLocation() {
@@ -327,8 +326,8 @@ public class XdocsCategoryIndexTest extends AbstractModuleTestSupport {
 
         for (int tableIdx = 0; tableIdx < tableNodes.getLength(); tableIdx++) {
             final Node tableNode = tableNodes.item(tableIdx);
-            if (tableNode instanceof Element) {
-                processTableElement((Element) tableNode, indexedChecks);
+            if (tableNode instanceof Element element) {
+                processTableElement(element, indexedChecks);
             }
         }
         return indexedChecks;
@@ -406,8 +405,8 @@ public class XdocsCategoryIndexTest extends AbstractModuleTestSupport {
             final NodeList children = parent.getChildNodes();
             for (int childIdx = 0; childIdx < children.getLength(); childIdx++) {
                 final Node child = children.item(childIdx);
-                if (child instanceof Element && tagName.equals(child.getNodeName())) {
-                    elements.add((Element) child);
+                if (child instanceof Element element && tagName.equals(child.getNodeName())) {
+                    elements.add(element);
                 }
             }
         }
@@ -428,8 +427,8 @@ public class XdocsCategoryIndexTest extends AbstractModuleTestSupport {
             final NodeList children = parent.getChildNodes();
             for (int childIdx = 0; childIdx < children.getLength(); childIdx++) {
                 final Node child = children.item(childIdx);
-                if (child instanceof Element && tagName.equals(child.getNodeName())) {
-                    result = Optional.of((Element) child);
+                if (child instanceof Element element && tagName.equals(child.getNodeName())) {
+                    result = Optional.of(element);
                     break;
                 }
             }
